app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lecpac-rss-service
spec:
  selector:
    app: lecpac-rss-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
