app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lecpac-rss-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: lecpac-demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lecpac-rss-service
                port:
                  number: 80
